<resources>
    <string name="app_name">My Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_point">.</string>
    <string name="key_addition">+</string>
    <string name="key_subtraction">-</string>
    <string name="key_multiplication">*</string>
    <string name="key_division">/</string>
    <string name="key_percent">%</string>
    <string name="key_equal_mark">=</string>
    <string name="input_value_text">0</string>
    <string name="answer_text">answer</string>
    <string name="operation_text">operation</string>
    <string name="enter_number">enter number</string>
    <string name="divided_zero_text">cannot be divided by zero</string>
    <string name="key_all_clear">ac</string>
    <string name="button_settings">set theme</string>
    <string name="close_set">close</string>
    <string name="my_style">My style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material light action bar dark</string>
    <string name="material_dark">Material dark</string>
</resources>